<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="14dp"
    tools:background="@color/black">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/img_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/display_image_of_users_story"
        android:scaleType="centerCrop"
        android:src="@drawable/img_placeholder"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        tools:text="Monkey D Lufy"
        android:textAlignment="textStart"
        android:textColor="@color/textview_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_story" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:singleLine="true"
        android:text="@string/description_item"
        android:ellipsize="end"
        android:textAlignment="textStart"
        android:textColor="@color/textview_color"
        android:textSize="14sp"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selengkapnya"
        android:visibility="gone"
        tools:visibility="visible"
        android:textAlignment="textStart"
        android:textColor="@color/date_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_createdDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/date"
        android:textAlignment="textStart"
        android:textColor="@color/date_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_more" />
</androidx.constraintlayout.widget.ConstraintLayout>