<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_caret_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/iv_close_menu" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/white_second"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_back"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:textColor="@color/white_second"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:padding="16dp"
        android:text="@string/change_language"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_language"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:textColor="@color/white_second"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:padding="16dp"
        android:text="@string/logout"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_logout"
        app:drawableTint="@color/white" />
</LinearLayout>